@@ -5,6 +5,7 @@
 	* Updated dependency for pagepath extension to 0.1.3
 	* Updated code for displaying result time and clones
 	* Fixed bug #2368: Error in TS object browser
+	* Fixed bug #2341: template.html does not validate
 
 2008-12-12  Dmitry Dulepov  <dmitry@typo3.org>
 
